--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Hello
+    </p>
     <script src="js/script.js"></script>
 </body>
 </html>
